--- a/app/App.css
+++ b/app/App.css
@@ -14,7 +14,16 @@
 .tab-content {
   border-left: 1px solid #ddd;
   border-right: 1px solid #ddd;
+  /* border-bottom: 1px solid #ddd; */
+  padding: 10px;
+  margin: 0px;
+}
+
+.div-form {
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
+  border-top: 1px solid #ddd;
   padding: 10px;
   margin: 0px;
 }
