--- a/app/App.css
+++ b/app/App.css
@@ -207,8 +207,8 @@ input.form-control {
 
 .foodcard-container .card-img-top {
   margin: 15px;
-  /* width: 70%;
-  height: 70%; */
+  width: 97%;
+  height: 97%;
 }
 
 .foodcard-container .price {
